Añadiendo ruta para obtener todas las cuotas de un socio
